Performed Automated Text UI Testing based on Level 4 example